// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`organisation module should handle "requestOrganisation" action 1`] = `
Array [
  Object {
    "type": "organisations/organisations/REQUEST_ORGANISATION",
  },
  Object {
    "payload": Object {
      "id": "591ab833d1f7fd000e5083a3",
      "name": "Pacocha, Harris and Metz",
      "template": "",
    },
    "type": "organisations/organisations/REQUEST_ORGANISATION_SUCCESS",
  },
]
`;

exports[`organisation module should handle "requestOrganisation" action 2`] = `
Object {
  "error": undefined,
  "isFetching": false,
  "organisation": Object {
    "id": "591ab833d1f7fd000e5083a3",
    "name": "Pacocha, Harris and Metz",
    "template": "",
  },
}
`;
